k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: yieldpoint
  labels:
    app.kubernetes.io/part-of: yieldpoint
